--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -15,7 +15,7 @@
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
-    "framer-motion": "^11.11.10",
+    "framer-motion": "^11.11.11",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
@@ -51,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.14"
   }
 }
