--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -24,9 +24,12 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
     "react-spring": "^9.7.4",
     "react-toastify": "^10.0.6",
-    "web-vitals": "^2.1.4"
+    "slick-carousel": "^1.8.1",
+    "web-vitals": "^2.1.4",
+    "your-library-name": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
